# wigo

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
wigo/: __init__.py
