[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wigo"
version = "0.0.1"
description = "A web automation framework built on Playwright with middleware support"
readme = "README.md"
requires-python = ">=3.7"

authors = [
    { name = "Ajay Patil", email = "ajay.patil.a01@gmail.com" }
]

dependencies = [
    "greenlet==3.3.0",
    "playwright==1.56.0",
    "playwright-stealth==2.0.0",
    "pyee==13.0.0",
    "typing_extensions==4.15.0"
]

[tool.setuptools.packages.find]
where = ["."]
